--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1"
-  }
+  },
+  "name": "finalproject-api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
+
